# cron-metal

./: .env_TEMPLATE  README.md  pyproject.toml  run_locally.py
.github/workflows/: run-tests.yaml
cronmetal/: email_utility.py  env_data.py  main.py
cronmetal/.deta/: prog_info  state
hooks/: pre-commit
scripts/: env_validator.py
tests/: test_env_data.py
