[tool.poetry]
  name = "cronmetal"
  version = "0.1.0"
  description = "Cron job that runs on deta.sh which queries metal-joke-api and sends the response as an email"
  authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
  python = "^3.8"
  deta = "^1.1.0"
  sendgrid = "^6.9.7"
  requests = "^2.27.1"

[tool.poetry.dev-dependencies]
  pytest = "^7.1.1"

[build-system]
  requires = ["poetry-core>=1.0.0"]
  build-backend = "poetry.core.masonry.api"
